test/negative/NativeWithoutStaticMethod.java
class NativeWithoutStaticMethod {
    public native void f();
}
